@@ -1,3 +1,7 @@
+*SVN*
+
+* Add Array#split for dividing arrays into one or more subarrays by value or block. [Sam Stephenson]
+
 *1.3.1* (April 6th, 2005)
 
 * Clean paths inside of exception messages and traces. [Nicholas Seckar]
